--- a/Pokemon/Pokemon/Base.lproj/Main.storyboard
+++ b/Pokemon/Pokemon/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tPN-fT-iBo">
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="20" minimumInteritemSpacing="20" id="tPN-fT-iBo">
                             <size key="itemSize" width="140" height="180"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -30,28 +30,24 @@
                                     <rect key="frame" x="0.0" y="0.0" width="140" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D5D-rO-zkv">
-                                            <rect key="frame" x="10" y="140" width="120" height="40"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="120" id="0Ap-hs-7u8"/>
-                                                <constraint firstAttribute="height" constant="40" id="gQQ-RO-7WE"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="16"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="D5D-rO-zkv">
+                                            <rect key="frame" x="10" y="148.5" width="120" height="26.5"/>
+                                            <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="24"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m6x-3k-9Y1">
-                                            <rect key="frame" x="10" y="10" width="120" height="120"/>
+                                            <rect key="frame" x="10" y="10" width="120" height="128.5"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="120" id="3Ym-QE-z09"/>
-                                                <constraint firstAttribute="height" constant="120" id="jTL-Qx-ofJ"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="120" id="3Ym-QE-z09"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="120" id="jTL-Qx-ofJ"/>
                                             </constraints>
                                         </imageView>
                                     </subviews>
                                     <color key="backgroundColor" red="0.091295145452022552" green="0.67115861177444458" blue="0.70453131198883057" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="D5D-rO-zkv" secondAttribute="bottom" id="5NH-tQ-Dbg"/>
+                                        <constraint firstAttribute="bottom" secondItem="D5D-rO-zkv" secondAttribute="bottom" constant="5" id="5NH-tQ-Dbg"/>
                                         <constraint firstAttribute="trailing" secondItem="D5D-rO-zkv" secondAttribute="trailing" constant="10" id="6JT-BT-kfb"/>
                                         <constraint firstItem="D5D-rO-zkv" firstAttribute="top" secondItem="m6x-3k-9Y1" secondAttribute="bottom" constant="10" id="C1O-i0-pTy"/>
                                         <constraint firstItem="m6x-3k-9Y1" firstAttribute="top" secondItem="s4I-Ds-9Cr" secondAttribute="top" constant="10" id="Kp4-1w-hwZ"/>
