--- a/Pokemon/Pokemon/Base.lproj/Main.storyboard
+++ b/Pokemon/Pokemon/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qe8-La-rmu" userLabel="ContentView">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="1297.5"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="360" translatesAutoresizingMaskIntoConstraints="NO" id="IgH-Rp-Nx7">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="360" image="pokeball" translatesAutoresizingMaskIntoConstraints="NO" id="IgH-Rp-Nx7">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="360"/>
                                                 <color key="backgroundColor" red="0.091295145452022552" green="0.67115861177444458" blue="0.70453131198883057" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </imageView>
@@ -301,6 +301,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="pokeball" width="511.9849853515625" height="511.9849853515625"/>
         <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
