--- a/Pokemon/Pokemon/Base.lproj/Main.storyboard
+++ b/Pokemon/Pokemon/Base.lproj/Main.storyboard
@@ -107,7 +107,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="1456"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qe8-La-rmu" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1297.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="669.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="360" image="pokeball" translatesAutoresizingMaskIntoConstraints="NO" id="IgH-Rp-Nx7">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="360"/>
@@ -216,28 +216,18 @@
                                                     <action selector="closeDetailView:" destination="2SR-zR-159" eventType="touchUpInside" id="WsV-1s-Rz9"/>
                                                 </connections>
                                             </button>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xzo-qz-qLn">
-                                                <rect key="frame" x="20" y="699.5" width="374" height="578"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="578" id="B46-Af-87b"/>
-                                                </constraints>
-                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" red="0.090744785964488983" green="0.68090575933456421" blue="0.70935267210006714" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="WNd-m8-45R" secondAttribute="trailing" constant="25" id="0Zp-L1-N4E"/>
-                                            <constraint firstAttribute="bottom" secondItem="xzo-qz-qLn" secondAttribute="bottom" constant="20" id="26S-KB-TUV"/>
                                             <constraint firstItem="IgH-Rp-Nx7" firstAttribute="leading" secondItem="Qe8-La-rmu" secondAttribute="leading" id="2NR-LX-g1i"/>
-                                            <constraint firstAttribute="trailing" secondItem="xzo-qz-qLn" secondAttribute="trailing" constant="20" id="H11-vi-9cb"/>
                                             <constraint firstItem="WNd-m8-45R" firstAttribute="top" secondItem="IgH-Rp-Nx7" secondAttribute="bottom" constant="42" id="Ofy-45-jvg"/>
-                                            <constraint firstItem="xzo-qz-qLn" firstAttribute="leading" secondItem="Qe8-La-rmu" secondAttribute="leading" constant="20" id="RVo-7A-s3t"/>
+                                            <constraint firstAttribute="bottom" secondItem="WNd-m8-45R" secondAttribute="bottom" constant="10" id="Uxs-IR-wl3"/>
                                             <constraint firstItem="IgH-Rp-Nx7" firstAttribute="top" secondItem="Qe8-La-rmu" secondAttribute="top" id="Xnx-Yw-gxT"/>
                                             <constraint firstItem="WNd-m8-45R" firstAttribute="leading" secondItem="Qe8-La-rmu" secondAttribute="leading" constant="26" id="bt8-A3-jO1"/>
                                             <constraint firstAttribute="trailing" secondItem="IgH-Rp-Nx7" secondAttribute="trailing" id="jcv-m7-oLt"/>
                                             <constraint firstAttribute="trailing" secondItem="xCq-x6-R8s" secondAttribute="trailing" constant="10" id="pLd-SX-JZY"/>
                                             <constraint firstItem="xCq-x6-R8s" firstAttribute="top" secondItem="Qe8-La-rmu" secondAttribute="top" constant="30" id="qPc-fd-IUd"/>
-                                            <constraint firstItem="xzo-qz-qLn" firstAttribute="top" secondItem="WNd-m8-45R" secondAttribute="bottom" constant="40" id="sIC-eo-ZdD"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -263,7 +253,6 @@
                     </view>
                     <size key="freeformSize" width="414" height="1500"/>
                     <connections>
-                        <outlet property="baseStatsView" destination="xzo-qz-qLn" id="WO9-n7-2Lv"/>
                         <outlet property="dataCardView" destination="WNd-m8-45R" id="WaH-bb-CZm"/>
                         <outlet property="heightValueLabel" destination="TaF-vo-2rl" id="9UR-qk-d64"/>
                         <outlet property="imageView" destination="IgH-Rp-Nx7" id="lIH-ci-KoW"/>
@@ -301,7 +290,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="pokeball" width="511.9849853515625" height="511.9849853515625"/>
+        <image name="pokeball" width="170" height="170"/>
         <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
